# sd-trolley-agent

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  run_agent.py
src/: __init__.py  agent.py  cli.py  graph.py  llm.py  main.py  models.py  prompts.py  state.py  tools.py
src/tools/: __init__.py  _clients.py  clock.py  gtfs.py  location.py  parking.py  routing.py  timeline.py  trolley.py
tests/: __init__.py  test_graph.py  test_llm.py  test_tools.py
